conf package with javafx-maven-plugin (bug https://github.com/openjfx/javafx-maven-plugin/issues/80)
add --add-opens java.base/java.lang.reflect=com.jfoenix manual in
App.bat